toradex: add easy installer configurability
Allow setting Toradex Easy Installer aka Tezi specific configuration
options like not enabling SATA, directly continuing with the SDP command
upon recovery, distrobooting otherwise or not storing the environment.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
Acked-by: Stefan Agner <stefan.agner@toradex.com>
(cherry picked from commit 8b2f82e2aca52bac5b67fbeddccef2dd44f21444)

Conflicts:
	board/toradex/common/Kconfig

added it on the end of the file and reworded the Kconfig entry so it
reflects what it is used for in this U-Boot.

Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>

--- a/board/toradex/common/Kconfig
+++ b/board/toradex/common/Kconfig
@@ -95,3 +95,9 @@ config TDX_CFG_BLOCK_USB_GADGET_PID
 	  offset 0x4000 is reserved for Colibri/Apalis modules.
 
 endif
+
+config TDX_EASY_INSTALLER
+	bool "Use Toradex Easy Installer specific options."
+	help
+	  Use Toradex Easy Installer specific options. Currently this is only
+	  needed to choose the correct ubiboot options for Easy Installer.
