--- a/board/toradex/colibri_imx7/Kconfig
+++ b/board/toradex/colibri_imx7/Kconfig
@@ -2,6 +2,7 @@ if TARGET_COLIBRI_IMX7
 
 choice
 	prompt "Colibri iMX7S/D variant"
+	optional
 
 config TARGET_COLIBRI_IMX7_NAND
 	bool "Support Colibri iMX7 Solo 256MB/Dual 512MB (raw NAND) modules"
@@ -25,9 +26,6 @@ config SYS_BOARD
 config SYS_VENDOR
 	default "toradex"
 
-config SYS_CONFIG_NAME
-	default "colibri_imx7"
-
 config COLIBRI_IMX7_EXT_PHYCLK
 	bool "External oscillator for Ethernet PHY clock provided"
 	help
@@ -41,7 +39,13 @@ config TDX_CFG_BLOCK
 config TDX_CFG_BLOCK_2ND_ETHADDR
 	default y
 
+config SYS_CONFIG_NAME
+	default "colibri_imx7_tezi_recovery" if (!TARGET_COLIBRI_IMX7_NAND && !TARGET_COLIBRI_IMX7_EMMC)
+
 if TARGET_COLIBRI_IMX7_NAND
+
+config SYS_CONFIG_NAME
+	default "colibri_imx7"
 
 config TDX_HAVE_NAND
 	default y
@@ -55,6 +59,9 @@ config TDX_CFG_BLOCK_OFFSET2
 endif
 
 if TARGET_COLIBRI_IMX7_EMMC
+
+config SYS_CONFIG_NAME
+	default "colibri_imx7"
 
 config TDX_HAVE_MMC
 	default y
