colibri-imx7: fix building tezi u-boot for nand module
Specify the particular target module as NAND to set required
default values for the target.
It also fixes the following warning and unblocks non-interactive
building:
==========
.config:167:warning: symbol value '' invalid for TDX_CFG_BLOCK_OFFSET
==========

Related-to: TEI-775
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@toradex.com>

--- a/configs/colibri_imx7_tezi_defconfig
+++ b/configs/colibri_imx7_tezi_defconfig
@@ -4,6 +4,7 @@ CONFIG_ENV_SIZE=0x20000
 CONFIG_ENV_OFFSET=0x380000
 CONFIG_DM_GPIO=y
 CONFIG_TARGET_COLIBRI_IMX7=y
+CONFIG_TARGET_COLIBRI_IMX7_NAND=y
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_IMX_RDC=y
 CONFIG_IMX_BOOTAUX=y
