mach-imx: Makefile: append 10k 0x00 at the end of u-boot-nand.imx
Since NXPs 5.4. release zeros are needed at the end of the bootloader.
Assume that never more than 10k of padding is needed and skip the
shell magic to get a correct size.

Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>

--- a/arch/arm/mach-imx/Makefile
+++ b/arch/arm/mach-imx/Makefile
@@ -123,7 +123,9 @@ u-boot.imx: u-boot.bin u-boot.cfgout $(PLUGIN).bin FORCE
 
 ifeq ($(CONFIG_IMX_NAND),y)
 cmd_u-boot-nand_imx = (dd bs=1024 count=1 if=/dev/zero 2>/dev/null) | \
-	cat - $< > $@
+	cat - $< > u-boot.imx.padded && \
+	(dd bs=10k count=1 if=/dev/zero 2>/dev/null) | \
+	cat u-boot.imx.padded - > $@ && rm u-boot.imx.padded
 
 u-boot-nand.imx: u-boot.imx FORCE
 	$(call if_changed,u-boot-nand_imx)
