--- a/configs/colibri_imx7_tezi_defconfig
+++ b/configs/colibri_imx7_tezi_defconfig
@@ -3,6 +3,7 @@ CONFIG_ARCH_MX7=y
 CONFIG_ENV_SIZE=0x20000
 CONFIG_ENV_OFFSET=0x380000
 CONFIG_DM_GPIO=y
+CONFIG_TDX_EASY_INSTALLER=y
 CONFIG_TARGET_COLIBRI_IMX7=y
 CONFIG_TARGET_COLIBRI_IMX7_NAND=y
 CONFIG_NR_DRAM_BANKS=1
