configs: colibri_imx6ull_tezi_defconfig: add TDX_EASY_INSTALLER
This config is needed that the correct ubiboot is selected

Related-to: TEI-775
Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>

--- a/configs/colibri-imx6ull_tezi_defconfig
+++ b/configs/colibri-imx6ull_tezi_defconfig
@@ -6,6 +6,7 @@ CONFIG_ENV_OFFSET=0x380000
 CONFIG_TARGET_COLIBRI_IMX6ULL=y
 CONFIG_DM_GPIO=y
 # CONFIG_TDX_CFG_BLOCK_USB_GADGET_PID is not set
+CONFIG_TDX_EASY_INSTALLER=y
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_DISTRO_DEFAULTS=y
 # CONFIG_ANDROID_BOOT_IMAGE is not set
