toradex: enable using another distro boot script for TEZI
The distro boot script for TEZI has another name to prevent u-boot of
regular BSP trying to boot TEZI image. Expand the usage of
TDX_EASY_INSTALLER Kconfig option to seek and use the TEZI-specific
name of the script.

Related-to: TEI-791
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@toradex.com>

--- a/board/toradex/common/Kconfig
+++ b/board/toradex/common/Kconfig
@@ -99,5 +99,6 @@ endif
 config TDX_EASY_INSTALLER
 	bool "Use Toradex Easy Installer specific options."
 	help
-	  Use Toradex Easy Installer specific options. Currently this is only
-	  needed to choose the correct ubiboot options for Easy Installer.
+	  Use Toradex Easy Installer specific options. Currently this is
+	  needed to choose the correct ubiboot options and use correct
+	  name of distro boot script for Easy Installer.
