toradex: use TEZI distro boot script
The distro boot script in TEZI image names boot-tezi.scr.
Enable using this particular name of script for u-boot images
which are used as a part of TEZI.

Related-to: TEI-791
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@toradex.com>

--- a/configs/colibri_imx6_tezi_defconfig
+++ b/configs/colibri_imx6_tezi_defconfig
@@ -9,6 +9,7 @@ CONFIG_ENV_OFFSET=0xFFFFDE00
 CONFIG_TARGET_COLIBRI_IMX6=y
 CONFIG_DM_GPIO=y
 # CONFIG_TDX_CFG_BLOCK_USB_GADGET_PID is not set
+CONFIG_TDX_EASY_INSTALLER=y
 CONFIG_SPL_TEXT_BASE=0x00908000
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
