--- a/configs/colibri_imx7_emmc_tezi_defconfig
+++ b/configs/colibri_imx7_emmc_tezi_defconfig
@@ -3,6 +3,7 @@ CONFIG_ARCH_MX7=y
 CONFIG_ENV_SIZE=0x2000
 CONFIG_ENV_OFFSET=0xFFFFDE00
 CONFIG_DM_GPIO=y
+CONFIG_TDX_EASY_INSTALLER=y
 CONFIG_TARGET_COLIBRI_IMX7=y
 CONFIG_TARGET_COLIBRI_IMX7_EMMC=y
 CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
