--- a/configs/colibri_imx7_tezi_recovery_defconfig
+++ b/configs/colibri_imx7_tezi_recovery_defconfig
@@ -3,6 +3,7 @@ CONFIG_ARCH_MX7=y
 CONFIG_ENV_SIZE=0x2000
 CONFIG_DM_GPIO=y
 # CONFIG_TDX_CFG_BLOCK is not set
+CONFIG_TDX_EASY_INSTALLER=y
 CONFIG_TARGET_COLIBRI_IMX7=y
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
