--- a/configs/colibri_imx7_emmc_tezi_defconfig
+++ b/configs/colibri_imx7_emmc_tezi_defconfig
@@ -23,7 +23,7 @@ CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_BOARD_LATE_INIT=y
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_DISPLAY_BOARDINFO_LATE=y
-CONFIG_SYS_PROMPT="Colibri iMX7 # "
+CONFIG_SYS_PROMPT="Colibri iMX7 TEZI # "
 # CONFIG_BOOTM_PLAN9 is not set
 # CONFIG_BOOTM_RTEMS is not set
 # CONFIG_CMD_IMI is not set
