--- a/configs/colibri_imx7_tezi_defconfig
+++ b/configs/colibri_imx7_tezi_defconfig
@@ -24,7 +24,7 @@ CONFIG_BOARD_LATE_INIT=y
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_DISPLAY_BOARDINFO_LATE=y
 CONFIG_BOUNCE_BUFFER=y
-CONFIG_SYS_PROMPT="Colibri iMX7 # "
+CONFIG_SYS_PROMPT="Colibri iMX7 TEZI # "
 # CONFIG_BOOTM_PLAN9 is not set
 # CONFIG_BOOTM_RTEMS is not set
 # CONFIG_CMD_IMI is not set
