--- a/configs/colibri_imx7_tezi_recovery_defconfig
+++ b/configs/colibri_imx7_tezi_recovery_defconfig
@@ -18,7 +18,7 @@ CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_BOARD_LATE_INIT=y
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_HUSH_PARSER=y
-CONFIG_SYS_PROMPT="Colibri iMX7 # "
+CONFIG_SYS_PROMPT="Colibri iMX7 TEZI # "
 CONFIG_CMD_BOOTZ=y
 # CONFIG_CMD_IMI is not set
 # CONFIG_CMD_XIMG is not set
